--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 
-    <a href="recipe.html"></a>
+    <a href="recipe.html" target = "_blank"> The Recipe Site is here</a>
 
 
 </body>
+
 </html>
